     a game to avoid ambiguity in case of multiple games with the same name
 * WML engine:
   * now tag [filter_adjacent] is supported in the Standard Unit Filter
   * remove the unused [neighbour_unit_filter] animation filter, now that SUF
   does it for us (and better)
 * graphics:
   * new graphics for the highwayman
   * no more idle animations for units next to an enemy unit
 * miscellaneous and bug fixes
   * various bug fixes and code cleanups

Version 1.3.7:
 * Campaigns
   * Son of the Black Eye
     * Fixed bug in 'Saving Inarix' where no user_description is generated for
       Inarix
   * Northern Rebirth
     * Colored portraits for Sister Theta and Ro'Arthian
     * Fixed bug in Anita's death event where Tallin speaks instead of her.
     * Fixed bug in 'Old Friend' where Rakshas' portrait doesn't appear.
     * Balancing and text changes in 'Old Friend'
   * Sceptre of Fire
     * Fixed a crash in the final scenario
   * Under the Burning Suns
     * Fixed invalid side bugs in 'Hunting Trolls'
     * Fixed an invalid terrain bug in 'A Long Night'
     * Fixed the dehydration in 'Across the Harsh Sands'
 * build system
   * Fixed autoconf/automake builds so that --disable-python-install
     will not try to create the default install directory for python
     stuff when it isn't needed. Otherwise if you aren't root, make
     errors out.
   * If --enable-display-revision isn't enabled SVNREV is no longer defined
     in the build process.
 * language and i18n:
   * updated translations: Danish, Finnish, French, German, Greek, Japanese,
     Lithuanian, Polish, Portuguese (Brazil), Russian, Serbian, Spanish,
     Swedish
   * updated DejaVu font to 2.19
 * multiplayer:
   * new map: Mokena Prairie
   * revised maps: Hamlets, Meteor Lake, 4p Hamlets, Paths of Daggers,
     Loris River
   * improvements to the sound of the countdown timer
   * the countdown timer alert can now start sounding while dialogs are open