@@ -9,6 +9,8 @@ Version 1.3.7+svn:
 
   * Graphics
     * New graphics for Highwayman.
+    * New button and slider in preferences to switch unit idle animations on
+      and off and set their frequency.
 
   * Language and translations
     * Updated translations: Bulgarian, Danish, Dutch, Finnish, French, German, 
